# TalkuteClaude

./: .env.template  .gitignore  CLAUDE.md  README.md  rust-clippy.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: MOBILE_KEYBOARD_GUIDE.md  MOBILE_KEYBOARD_INSTALLATION.md  PLATFORM_SETUP.md  Talkute_Product_Experience_Design.md  Talkute产品PRD和使用场景.docx  validation-report.md
flutter-ui/: README.md  analysis_options.yaml  pubspec.yaml
flutter-ui/integration_test/: context_detection_test.dart  home_screen_test.dart
rust-core/: .rustfmt.toml  Cargo.toml
rust-core/migrations/: 001_initial_schema.sql  002_product_experience.sql
rust-core/src/: error.rs  lib.rs  logging.rs
rust-core/src/ai/: client.rs  mod.rs  polisher.rs  prompts.rs  translator.rs
rust-core/src/context/: android.rs  detector.rs  ios.rs  linux.rs  macos.rs  mod.rs  registry.rs  windows.rs
rust-core/src/ffi/: bridge.rs  dict_ffi.rs  mod.rs  session_manager.rs  types.rs
rust-core/src/network/: mod.rs  offline_handler.rs
rust-core/src/platform/: hotkey.rs  mod.rs  text_injection.rs  tray.rs  window.rs
rust-core/src/platform/linux/: hotkey.rs  mod.rs  text_injection.rs  tray.rs  window.rs
rust-core/src/platform/macos/: hotkey.rs  mod.rs  text_injection.rs  tray.rs  window.rs
rust-core/src/platform/windows/: hotkey.rs  mod.rs  text_injection.rs  tray.rs  window.rs
rust-core/src/processing/: dictionary.rs  filler_removal.rs  formatter.rs  mod.rs  self_correction.rs
rust-core/src/quota/: mod.rs  tracker.rs
rust-core/src/speech/: audio_capture.rs  client.rs  language_detection.rs  mod.rs
rust-core/src/state/: manager.rs  mod.rs  session.rs
rust-core/src/storage/: cleanup.rs  database.rs  dictionary.rs  export.rs  migrations.rs  mod.rs  models.rs  profile.rs  quota.rs
rust-core/src/storage/migrations/: 002_personal_dictionary.sql
rust-core/src/tools/: mod.rs  profiler.rs
rust-core/tests/: multilang_workflow_test.rs
rust-core/tests/ai/: client_test.rs  context_polisher_test.rs  context_prompts_test.rs  polisher_test.rs  translation_test.rs
rust-core/tests/benchmarks/: performance_test.rs
rust-core/tests/context/: android_test.rs  detector_test.rs  ios_test.rs  linux_test.rs  macos_test.rs  windows_test.rs
rust-core/tests/ffi/: context_test.rs  dict_test.rs  session_test.rs  timeout_test.rs  transcription_test.rs  translation_test.rs
rust-core/tests/integration/: e2e_test.rs  ffi_test.rs
rust-core/tests/network/: offline_test.rs
rust-core/tests/processing/: dict_app_test.rs  filler_multilang_test.rs  filler_removal_test.rs  formatter_test.rs  pipeline_dict_test.rs  self_correction_test.rs
rust-core/tests/quota/: check_test.rs
rust-core/tests/security/: audit_test.rs
rust-core/tests/speech/: audio_capture_test.rs  client_test.rs  lang_detect_test.rs  multilang_test.rs  service_test.rs
rust-core/tests/storage/: context_test.rs  dict_export_test.rs  dictionary_test.rs  history_test.rs  session_test.rs
rust-core/tests/unit/: dictionary_test.rs  history_test.rs  preferences_test.rs  session_test.rs
(+73 files in other folders)
