[workspace]
resolver = "2"
members = [
    "rust-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Talkute Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite
rusqlite = { version = "0.30", features = ["bundled"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.10"
log = "0.4"

# FFI bindings
flutter_rust_bridge = "2.11"

# Error handling
thiserror = "1.0"

# Static runtime initialization
once_cell = "1.19"

# Text processing
regex = "1.10"

# Self-correction detection
levenshtein = "1.0"
