[package]
name = "talkute-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Talkute Team"]

[lib]
name = "talkute_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.10"
log = "0.4"

# FFI bindings
flutter_rust_bridge = "2.11"

# Error handling
thiserror = "1.0"

# Static runtime initialization
once_cell = "1.19"

# Text processing
regex = "1.10"

# Self-correction detection
levenshtein = "1.0"

[dev-dependencies]
tokio-test = "0.4"

# Integration tests
[[test]]
name = "ffi_session_test"
path = "tests/ffi/session_test.rs"

[[test]]
name = "ffi_transcription_test"
path = "tests/ffi/transcription_test.rs"

[[test]]
name = "ai_client_test"
path = "tests/ai/client_test.rs"

[[test]]
name = "ai_polisher_test"
path = "tests/ai/polisher_test.rs"

[[test]]
name = "ffi_timeout_test"
path = "tests/ffi/timeout_test.rs"

[[test]]
name = "quota_check_test"
path = "tests/quota/check_test.rs"

[[test]]
name = "e2e_test"
path = "tests/integration/e2e_test.rs"

[[test]]
name = "storage_context_test"
path = "tests/storage/context_test.rs"

[[test]]
name = "context_windows_test"
path = "tests/context/windows_test.rs"

[[test]]
name = "context_macos_test"
path = "tests/context/macos_test.rs"

[[test]]
name = "context_linux_test"
path = "tests/context/linux_test.rs"

[[test]]
name = "context_ios_test"
path = "tests/context/ios_test.rs"

[[test]]
name = "context_android_test"
path = "tests/context/android_test.rs"

[[test]]
name = "context_detector_test"
path = "tests/context/detector_test.rs"

[[test]]
name = "ai_context_prompts_test"
path = "tests/ai/context_prompts_test.rs"

[[test]]
name = "ai_context_polisher_test"
path = "tests/ai/context_polisher_test.rs"
